# junqi_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  arm-gcc.cmake  build.sh
cmake/: toolchain_study210.cmake
deploy/: pack.sh  package.sh  run.sh  run_capture_test.sh
deploy/junqi_deploy/opt/junqi/: junqi_cli  junqi_gui  run.sh  run_cli.sh
deploy/junqi_deploy/opt/opencv3/lib/: libopencv_core.so.3.4.16  libopencv_imgcodecs.so.3.4.16  libopencv_imgproc.so.3.4.16
deploy/junqi_deploy/opt/qt5.6.2/lib/: libQt5DBus.so.5.6.2  libQt5Network.so.5.6.2
deploy/junqi_deploy/opt/tslib/lib/: libts-1.4.so.0.2.4
devlog/: 2026-06-07-arm-cross-compile.md  2026-06-07-gui-debug.md  2026-06-13-task-and-issue-summary.md  CHANGELOG.md  TODO.md
docs/: design_spec.md  execution_guide.md  requirements.md  technical_spec.md
include/junqi/: battle_judge.h  bg_utils.h  camera_capture.h  character_extractor.h  color_classifier.h  detector.h  main_window.h  pipeline.h  preprocessor.h  processing_worker.h  qt_utils.h  recognizer.h  result.h  template_library.h
src/: battle_judge.cpp  camera_capture.cpp  character_extractor.cpp  color_classifier.cpp  detector.cpp  main.cpp  main_window.cpp  pipeline.cpp  preprocessor.cpp  processing_worker.cpp  qt_main.cpp  recognizer.cpp  template_library.cpp
tools/: analyze_real_samples.cpp  benchmark.cpp  board_sequence_capture.cpp  capture_template.cpp  debug_pipeline.cpp  robustness_test.cpp  score_templates.cpp
